--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Velox - Free Html5 Portfolio One Page Template</title>
+        <title>Robinson Rosado's Portfolio Site</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <!--        <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">-->
+               <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
 
 
         <!--For Plugins external css-->
@@ -28,6 +25,7 @@
         <link rel="stylesheet" href="assets/css/responsive.css" />
 
         <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
     </head>
     <body data-spy="scroll" data-target="#main_navbar">
         <!--[if lt IE 8]>
@@ -44,7 +42,6 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="logo" /></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,9 +65,9 @@
                         <div class="home-wrapper">
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="home-content text-center">
-                                    <h1>Velox One Page Template</h1>
-                                    <h4>Clean, Responsive, customizable one page template</h4>
-                                    <a href="#" class="btn btn-primary">Get Started Now</a>
+                                    <h1>Robinson Rosado</h1>
+                                    <h4>NYC-based Software Engineer. Ever inquisitive, infinitely curious, and always hungry for knowledge. Through my pursuit of answers and innovation I found myself a home in the near-endless possibilities of computer programming. My eagerness to explore new fronts is never unsatisfied by the wealth of opportunities that this industry has to offer those seeking them. Challenges abound but taming them rewards an understanding that arms me well for the next. I seek that next challenge.</h4>
+                                    <a href="#contact" class="btn btn-primary">Contact Me</a>
                                 </div>
                             </div>
                         </div>
@@ -96,7 +93,7 @@
                                 <div class="separator2"></div>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry.</p>
                             </div>
-                        </div> 
+                        </div>
 
                         <div class="col-md-3 col-sm-6 col-xs-12">
                             <div class="service-item text-center">
@@ -105,7 +102,7 @@
                                 <div class="separator2"></div>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry.</p>
                             </div>
-                        </div> 
+                        </div>
 
                         <div class="col-md-3 col-sm-6 col-xs-12">
                             <div class="service-item text-center">
@@ -114,7 +111,7 @@
                                 <div class="separator2"></div>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry.</p>
                             </div>
-                        </div> 
+                        </div>
 
                         <div class="col-md-3 col-sm-6 col-xs-12">
                             <div class="service-item text-center">
@@ -123,11 +120,11 @@
                                 <div class="separator2"></div>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry.</p>
                             </div>
-                        </div> 
+                        </div>
 
                     </div>
                 </div>
-            </div> <!-- /container -->       
+            </div> <!-- /container -->
         </section>
 
 
@@ -202,7 +199,7 @@
                                     </div>
 
                                 </div>
-                                <a href="#" class="btn btn-primary">Show More</a>	
+                                <a href="#" class="btn btn-primary">Show More</a>
                             </div>
                         </div>
                     </div>
@@ -296,7 +293,7 @@
                         </div>
                     </div>
                 </div>
-            </div> <!-- /container -->       
+            </div> <!-- /container -->
         </section>
 
         <!-- Sections -->
@@ -367,7 +364,7 @@
                     </div>
 
                 </div>
-            </div> <!-- /container -->       
+            </div> <!-- /container -->
         </section>
 
         <!-- Sections -->
@@ -441,7 +438,7 @@
                     </div>
 
                 </div>
-            </div> <!-- /container -->       
+            </div> <!-- /container -->
         </section>
 
 
