--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Robinson Rosado - Portfolio Site</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Robinson Rosado</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,8 +78,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">NYC-based. Ever inquisitive, infinitely curious, and always hungry for knowledge. Through my pursuit of answers and innovation I found myself a home in the near-endless possibilities of computer programming. My eagerness to explore new fronts is never unsatisfied by the wealth of opportunities that this industry has to offer those seeking them. Challenges abound but taming them rewards an understanding that arms me well for the next. I seek that next challenge.</div>
+                <div class="intro-heading">Robinson Rosado - Software Developer</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
