--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#aboutme">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -78,20 +78,20 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">NYC-based. Ever inquisitive, infinitely curious, and always hungry for knowledge. Through my pursuit of answers and innovation I found myself a home in the near-endless possibilities of computer programming. My eagerness to explore new fronts is never unsatisfied by the wealth of opportunities that this industry has to offer those seeking them. Challenges abound but taming them rewards an understanding that arms me well for the next. I seek that next challenge.</div>
-                <div class="intro-heading">Robinson Rosado - Software Developer</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Robinson Rosado</div>
+                <div class="intro-heading">NYC-Based Software Engineer</div>
+                <a href="#aboutme" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="aboutme">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">A Little Bit About Me</h2>
+                    <h3 class="section-subheading text-muted">NYC-based Software Engineer. Ever inquisitive, infinitely curious, and always hungry for knowledge. Through my pursuit of answers and innovation I found myself a home in the near-endless possibilities of computer programming. My eagerness to explore new fronts is never unsatisfied by the wealth of opportunities that this industry has to offer those seeking them. Challenges abound but taming them rewards an understanding that arms me well for the next. I seek that next challenge.</h3>
                 </div>
             </div>
             <div class="row text-center">
