--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#aboutme">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
@@ -128,8 +128,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Projects</h2>
+                    <h3 class="section-subheading text-muted">A few of the projects I have worked on.</h3>
                 </div>
             </div>
             <div class="row">
@@ -143,8 +143,8 @@
                         <img src="img/portfolio/roundicons.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>LikeMe</h4>
+                        <p class="text-muted">Full Stack one-page app made using Ruby on Rails backend and React-Redux frontend.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -157,8 +157,8 @@
                         <img src="img/portfolio/startup-framework.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Pets vs Skeletons</h4>
+                        <p class="text-muted">Browser-based game made using only JavaScript, HTML and CSS.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -171,8 +171,8 @@
                         <img src="img/portfolio/treehouse.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Radical</h4>
+                        <p class="text-muted">Lite version of View-Controller framework.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
