added images for portfolio

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Robinson Rosado</div>
-                <div class="intro-heading">NYC-Based Software Engineer</div>
-                <a href="#aboutme" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">NYC-Based Software Engineer</div>
+                <div class="intro-heading">Robinson Rosado</div>
+                <a href="#aboutme" class="page-scroll btn btn-xl">Learn More</a>
             </div>
         </div>
     </header>
@@ -98,10 +98,10 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-puzzle-piece fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Problem Solver</h4>
+                    <p class="text-muted">A fan of puzzles ever since I was a child. As an adult, programming has given me the ability to apply those skills to solve real-world problems.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -140,11 +140,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/likeme-mini.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>LikeMe</h4>
-                        <p class="text-muted">Full Stack one-page app made using Ruby on Rails backend and React-Redux frontend.</p>
+                        <p class="text-muted">Full Stack app made using Ruby on Rails backend and React-Redux frontend.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -154,7 +154,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/pvs-mini.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Pets vs Skeletons</h4>
@@ -172,49 +172,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Radical</h4>
-                        <p class="text-muted">Lite version of View-Controller framework.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/golden.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/escape.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/dreams.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
+                        <p class="text-muted">"Lite" version of a View-Controller framework inspired by Rails.</p>
                     </div>
                 </div>
             </div>
