about me points

--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
                         <i class="fa fa-puzzle-piece fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Problem Solver</h4>
-                    <p class="text-muted">A fan of puzzles ever since I was a child. As an adult, programming has given me the ability to apply those skills to solve real-world problems.</p>
+                    <p class="text-muted">A fan of puzzles ever since I was a child. As an adult, programming gives me the ability to apply those skills to solve real-world problems.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Technology-Oriented</h4>
+                    <p class="text-muted">Enamored with cutting-edge technology. I love learning more about what's the next big thing to change the world or challenge our everyday.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Fast Learner</h4>
+                    <p class="text-muted">Learned not one but 2 programming languages (JavaScript and Ruby) well enough to create fully fleshed out apps in a matter of 2-3 weeks.</p>
                 </div>
             </div>
         </div>
