--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#timeline">Timeline</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
@@ -180,12 +180,12 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="timeline">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Timeline</h2>
+                    <h3 class="section-subheading text-muted">A glimpse of my journey so far.</h3>
                 </div>
             </div>
             <div class="row">
@@ -193,29 +193,29 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>2010-2014</h4>
+                                    <h4 class="subheading">New Jersey Institute of Technology</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I acquired my Bachelor's Degree in Biomedical Engineering and also got my first real taste of programming that could be interacted with in the real world as part of my Capstone Project.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>January 2015 - September 2018</h4>
+                                    <h4 class="subheading">New York-Presbyterian Hospital</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Worked with a multitude of medical equipment ranging from Class I to Class III. After 2 years of showcasing aptitute and skill, my efforts recognized by Director of Biomed and I was promoted to BMET II.</p>
                                 </div>
                             </div>
                         </li>
@@ -225,11 +225,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>September 2018 - December 2018</h4>
+                                    <h4 class="subheading">App Academy Coding Bootcamp</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Incredibly intense, 1000+ hour coding bootcamp focusing on OOP, TDD, Algorithmic Thinking, Time and Space Complexity, etc. Acquired skills in Ruby, Rails, JavaScript, React, Redux, SQL, Git and more.</p>
                                 </div>
                             </div>
                         </li>
@@ -239,19 +239,19 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Most Recently</h4>
+                                    <h4 class="subheading">On My Own</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Built and maintained a collection of one-page apps built entirely by myself from Backend to Frontend in only a few weeks. Currently looking to elevate my skills and apply them at an amazing company.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>Be on the
+                                    <br>Lookout
+                                    <br>for More!</h4>
                             </div>
                         </li>
                     </ul>
