checkout links and skill icons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
 
@@ -53,7 +53,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#aboutme">About</a>
+                        <a class="page-scroll" href="#aboutme">About Me</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Projects</a>
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#timeline">Timeline</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#links">My Stuff</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -261,56 +261,27 @@
     </section>
 
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="links" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Check It Out</h2>
+                    <h3 class="section-subheading text-muted">Links to some of my other pages.</h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="display: flex; justify-content: center;">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <img src="img/team/me.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Robinson Rosado</h4>
+                        <p class="text-muted">Full Stack Software Engineer</p>
+                        <ul class="list-inline social-buttons" style="display:flex; justify-content:center;">
+                            <li><a href="https://robrosado1.github.io"><i class="fa fa-laptop"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.github.com/robrosado1" style="background-color:white;">
+                              <i class="fa fa-github" style="font-size: 48px; line-height:0.85; color:#222; border-radius:50%;"></i>
+                            </a></li>
+                            <li><a href="https://www.linkedin.com/in/robinson-rosado-283273131"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -318,7 +289,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Visit my Github to take a closer look at the code behind my projects or checkout my LinkedIn to get a feel for my experience. Otherwise, contact me below!</p>
                 </div>
             </div>
         </div>
@@ -327,27 +298,19 @@
     <!-- Clients Aside -->
     <aside class="clients">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
+            <div class="row" style="display:flex; align-items:center; justify-content:space-between;">
+                  <i class="devicon-ruby-plain-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-rails-plain-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-javascript-plain colored" style="font-size:50px;"></i>
+                  <i class="devicon-react-original-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+                  <i class="devicon-github-plain-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-nodejs-plain colored" style="font-size:50px;"></i>
+                  <i class="devicon-postgresql-plain-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-css3-plain-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-html5-plain-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-heroku-plain-wordmark colored" style="font-size:50px;"></i>
+                  <i class="devicon-jquery-plain-wordmark colored" style="font-size:50px;"></i>
             </div>
         </div>
     </aside>
@@ -357,8 +320,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Contact Me</h2>
+                    <h3 class="section-subheading text-muted">Send me an email if you'd like to get in touch.</h3>
                 </div>
             </div>
             <div class="row">
