--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="row" style="display: flex; justify-content: center;">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/me.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/me2.jpg" class="img-responsive img-circle" alt="">
                         <h4>Robinson Rosado</h4>
                         <p class="text-muted">Full Stack Software Engineer</p>
                         <ul class="list-inline social-buttons" style="display:flex; justify-content:center;">
