--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@
                         <h4>Robinson Rosado</h4>
                         <p class="text-muted">Full Stack Software Engineer</p>
                         <ul class="list-inline social-buttons" style="display:flex; justify-content:center;">
-                            <li><a href="https://robrosado1.github.io"><i class="fa fa-laptop"></i></a>
-                            </li>
+                            <li><a href="img/portfolio/res.pdf">
+                              <i class="fa fa-paperclip" style="font-size:30px; line-height:1.35;"></i>
+                            </a></li>
                             <li><a href="https://www.github.com/robrosado1" style="background-color:white;">
                               <i class="fa fa-github" style="font-size: 48px; line-height:0.85; color:#222; border-radius:50%;"></i>
                             </a></li>
@@ -289,7 +290,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Visit my Github to take a closer look at the code behind my projects or checkout my LinkedIn to get a feel for my experience. Otherwise, contact me below!</p>
+                    <p class="large text-muted">Visit my <a href="https://www.github.com/robrosado1">Github</a> to take a closer look at the code behind my projects. Checkout my <a href="https://www.linkedin.com/in/robinson-rosado-283273131">LinkedIn</a> profile or my <a href="img/portfolio/res.pdf">Resume</a> above to get a feel for my experience. Otherwise, contact me below!</p>
                 </div>
             </div>
         </div>
