--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.github.com/robrosado1" class="icon style2 fa-github-alt"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/robinson-rosado-283273131" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/robinson-rosado" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://angel.co/robinson-rosado" class="icon style2 fa-angellist"><span class="label">Angel List</span></a></li>
 								<li><a href="https://robrosado1.github.io" class="icon style2 fa-laptop"><span class="label">Angel List</span></a></li>
 								<li><a href="resume/resume.pdf" class="icon style2 fa-file"><span class="label">Resume</span></a></li>
