add repo links to projets

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 								frontend also let me authenticate users with bootstrapping.
 								Modular components for reusability makes for more DRY-code and
 								allows a more streamlined user experience.</p>
-							<ul class="actions stacked">
+							<ul class="actions">
 								<li><a href="https://like-me.herokuapp.com" class="button">Try It Out</a></li>
+								<li><a href="https://github.com/robrosado1/LikeMe" class="button">Check the Repo</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -71,8 +72,9 @@
 								interactions. All styling was created using HTML and CSS on
 								JavaScript's Canvas feature using requestAnimationFrame to set
 								the speed of rendering.</p>
-							<ul class="actions stacked">
+							<ul class="actions">
 								<li><a href="https://robrosado1.github.io/Pets-vs-Skeletons/" class="button">Play It Here</a></li>
+								<li><a href="https://github.com/robrosado1/Pets-vs-Skeletons" class="button">Check the Repo</a></li>
 							</ul>
 						</div>
 						<div class="image">
