--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div class="content">
 							<h1>Robinson Rosado</h1>
 							<img class="moi" src="images/moi.jpg" alt="" />
-							<p class="major">NYC-based Software Engineer. Ever inquisitive,
+							<p class="major">US-based Software Engineer looking for remote opportunities. Ever inquisitive,
 								infinitely curious, and always hungry for knowledge. Through my
 								pursuit of answers and innovation I found myself a home in the
 								near-endless possibilities of computer programming. My eagerness
